fdo#86219 use vector replication when obtaining scalar for jump matrix

Change-Id: Id778dd7f649b480538fe757aab70c5e890123f31
(cherry picked from commit 9807d4498cd0c759019e36c822bca3b5ea563600)
Reviewed-on: https://gerrit.libreoffice.org/12394
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>